# claude-agent-viz

./: .gitignore  LICENSE  README.md  pyproject.toml
src/claude_agent_tui/: constants.py  process.py  state.py  utils.py
src/claude_agent_tui/discovery/: parser.py
src/claude_agent_tui/spawner/: terminal.py
src/claude_agent_tui/store/: config_models.py  models.py
src/claude_agent_tui/tui/: CLAUDE.md
src/claude_agent_tui/tui/screens/: CLAUDE.md
src/claude_agent_tui/tui/widgets/: detail_panel.py  session_list.py  tool_list.py
src/claude_agent_viz/: CLAUDE.md  state.py
src/claude_agent_viz/discovery/: CLAUDE.md  config_parser.py  parser.py  watcher.py
src/claude_agent_viz/spawner/: CLAUDE.md  terminal.py
src/claude_agent_viz/store/: CLAUDE.md  config_models.py  models.py
src/claude_agent_viz/tui/: CLAUDE.md  app.py
src/claude_agent_viz/tui/screens/: CLAUDE.md  resume_terminal_screen.py
src/claude_agent_viz/tui/widgets/: CLAUDE.md  __init__.py  agent_list.py  command_list.py  config_list.py  detail_panel.py  hook_list.py  mcp_server_list.py  resume_terminal.py  skill_list.py
