[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-agent-tui"
version = "0.1.0"
description = "TUI for visualizing and interacting with Claude agent sessions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Claude Agent Viz Contributors" }
]
keywords = [
    "claude",
    "anthropic",
    "agent",
    "visualization",
    "tui",
    "terminal",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Utilities",
]

dependencies = [
    "textual>=0.50.0",
    "rich>=13.0.0",
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[project.scripts]
claude-tui = "claude_agent_tui.cli:main"

[project.urls]
Homepage = "https://github.com/anthropics/claude-agent-tui"
Documentation = "https://github.com/anthropics/claude-agent-tui#readme"
Repository = "https://github.com/anthropics/claude-agent-tui"
Issues = "https://github.com/anthropics/claude-agent-tui/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_agent_tui"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["claude_agent_tui"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
